# hrms

./: README.md  techstack.md
client/: .gitignore  AGENTS.md  next.config.ts  package.json  pnpm-lock.yaml  prettier.config.ts
client/src/: env.ts
client/src/app/: layout.tsx
client/src/app/auth/: page.tsx
client/src/hooks/: use-admins.ts  use-attendance.ts  use-auth.ts  use-debounce.ts  use-debounced-search.ts  use-employees.ts  use-stats.ts
client/src/providers/: app-providers.tsx  auth-provider.tsx
client/src/stores/: auth-store.ts
client/src/types/: api.ts  attendance.ts  auth.ts  employee.ts  index.ts  stats.ts
server/: .env.sample  .gitignore  README.md  pyproject.toml  seed.py
server/alembic/: env.py
server/app/: __init__.py  main.py  seed.py
server/app/api/: router.py
server/app/api/routes/: __init__.py  admins.py  attendance.py  attendance_global.py  auth.py  employees.py  health.py  stats.py
server/app/controllers/: __init__.py  admins_controller.py  attendance_controller.py  auth_controller.py  employee_controller.py  stats_controller.py
server/app/core/: config.py  deps.py  exceptions.py  logger.py  rbac.py  security.py
server/app/middleware/: request_logging.py  security_headers.py
server/app/models/: __init__.py  admin.py  attendance.py  employee.py
server/app/schemas/: __init__.py  admin.py  admins.py  attendance.py  employee.py  response.py  stats.py
server/app/services/: admin_service.py  admins_service.py  attendance_service.py  employee_service.py  stats_service.py
server/app/utils/: response.py
(+22 files in other folders)
